
add_subdirectory(./pcViewer)
if (ASIO_FOUND)
  add_subdirectory(./imuViewer)
endif()
if (CUDA_FOUND)
  add_subdirectory(./simpleGui)
  add_subdirectory(./marker)
  add_subdirectory(./depthFusion)
  add_subdirectory(./normalsViewer)
  add_subdirectory(./planeEstimation)
  add_subdirectory(./surround3D)

  if (GTSAM_FOUND)
    add_subdirectory(./imuDepthFusion)
  endif()
  if (ASIO_FOUND)
    add_subdirectory(./cameraImuViewer)
  endif()
  if (Calibu_FOUND)
    add_subdirectory(./calib)
    add_subdirectory(./depthCalib)
  endif()
  if (aruco_FOUND)
    add_subdirectory(./markerAruco)
  endif()
  add_subdirectory(./lymphedema)
  add_subdirectory(./marchingCubes)
  add_subdirectory(./meshViewer)
  add_subdirectory(./bbOptAlign)
endif()
