
add_subdirectory(./pcViewer)
if (ASIO_FOUND)
  add_subdirectory(./imuViewer)
endif()
if (CUDA_FOUND)
  add_subdirectory(./simpleGui)
  add_subdirectory(./marker)
  add_subdirectory(./depthFusion)
  add_subdirectory(./normalsViewer)
  add_subdirectory(./planeEstimation)
  add_subdirectory(./lymphedema)
  add_subdirectory(./marchingCubes)
  add_subdirectory(./tsdfResolution)
  #add_subdirectory(./esm)
  add_subdirectory(./odometry)
  add_subdirectory(./features)
  add_subdirectory(./twoViewSimulator)
  add_subdirectory(./meshBrowser)
  add_subdirectory(./dpmeansSeg)
  if (GTSAM_FOUND)
    add_subdirectory(./imuDepthFusion)
  endif()
  if (ASIO_FOUND)
    add_subdirectory(./cameraImuViewer)
  endif()
  if (Calibu_FOUND)
    add_subdirectory(./calib)
    add_subdirectory(./depthCalib)
  endif()
  if (aruco_FOUND)
    add_subdirectory(./markerAruco)
  endif()
  if (ANN_FOUND)
    add_subdirectory(./meshViewer)
    if (ISAM_FOUND)
      add_subdirectory(./surround3D)
      add_subdirectory(./icpSamFusion)
    endif()
    if (BUILD_BB) 
      add_subdirectory(./bbOptAlign)
    endif()
  endif()
  add_subdirectory(./skinning)
  add_subdirectory(./laplace_beltrami)
  add_subdirectory(./fMap)
endif()
